--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,9 @@
 		"sstream": "cpp",
 		"unordered_map": "cpp",
 		"__functional_03": "cpp",
-		"__split_buffer": "cpp"
+		"__split_buffer": "cpp",
+		"__bit_reference": "cpp",
+		"initializer_list": "cpp",
+		"__node_handle": "cpp"
 	}
 }
