--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,47 @@
 		"__split_buffer": "cpp",
 		"__bit_reference": "cpp",
 		"initializer_list": "cpp",
-		"__node_handle": "cpp"
+		"__node_handle": "cpp",
+		"complex": "cpp",
+		"optional": "cpp",
+		"type_traits": "cpp",
+		"utility": "cpp",
+		"__debug": "cpp",
+		"__errc": "cpp",
+		"__functional_base": "cpp",
+		"__locale": "cpp",
+		"__mutex_base": "cpp",
+		"__nullptr": "cpp",
+		"__string": "cpp",
+		"__threading_support": "cpp",
+		"__tuple": "cpp",
+		"algorithm": "cpp",
+		"atomic": "cpp",
+		"cctype": "cpp",
+		"chrono": "cpp",
+		"cmath": "cpp",
+		"cstdarg": "cpp",
+		"cstddef": "cpp",
+		"cstdint": "cpp",
+		"cstdio": "cpp",
+		"cstdlib": "cpp",
+		"cstring": "cpp",
+		"ctime": "cpp",
+		"cwchar": "cpp",
+		"cwctype": "cpp",
+		"exception": "cpp",
+		"ios": "cpp",
+		"iostream": "cpp",
+		"istream": "cpp",
+		"limits": "cpp",
+		"mutex": "cpp",
+		"new": "cpp",
+		"ostream": "cpp",
+		"ratio": "cpp",
+		"stdexcept": "cpp",
+		"streambuf": "cpp",
+		"system_error": "cpp",
+		"tuple": "cpp",
+		"typeinfo": "cpp"
 	}
 }
